NEW FEATURE:  Added BIG transform (strategically inserts 8ths)
NEW FEATURE:  Added QUICK transform (strategically inserts 16ths)
NEW FEATURE:  Added SKIPPY transform
BUG FIX:  Fixed song seeking in editor at non 1x music rates
NEW FEATURE:  More complete controls for BackgroundChanges in editor
NEW FEATURE:  Shift+P in editor for "play current beat until end"
CHANGE:  Nonstop and Oni scoring and combo counter behave exactly like DDREX
CHANGE:  HoldNote life snaps to full when button is pressed (instead of 
	refilling slowly) ala DDR

----------------------- Version 3.01 ---------------------------
CHANGE:  Simplified NoteSkin tap graphic format.  Old NoteSkins will need to 
	update the tap graphic.
NEW FEATURE:  AutoSync status now shown during gameplay with icon
NEW FEATURE:  added autogen icon to select music
NEW FEATURE:  toggle for easter eggs in Machine Options
NEW FEATURE:  marvelous step timing togglable in Machine Options
NEW FEATURE:  Grade AAAA (all marvelous)
CHANGE:  Only show ScreenHowToPlay if at least one player chose easy
NEW FEATURE: New High Score screen
NEW FEATURE: Full "attract" sequence
NEW FEATURE: .SM files can now contain UTF-8 text.
NEW FEATURE: New alignment tags for bitmap fonts.
NEW FEATURE: Bitmap fonts now support full Unicode mapping.
CHANGE:  Internal precision increased; 32nd notes are no longer rounded.
NEW FEATURE: Added "RANDOM" to music select.
CHANGE:  Loading optimizations.
NEW FEATURE: Caution and group select screens can now be disabled.
CHANGE:  Input, renderer and sound subsystems rewritten.
BUG FIX: Music scrollbar fixed.
CHANGE:  Faster music wheel sort changing and scrolling.
CHANGE:  Ignore invalid KSFs.
NEW FEATURE: DWI SAMPLESTART and SAMPLELENGTH in milliseconds is now
         supported.
CHANGE:  Courses are no longer limited to 300 songs.
CHANGE:  The radar display is improved.
NEW FEATURE: The Caution and Select Group screens can now be disabled.
CHANGE:  OKs now count as a step in score calculation.