@@ -74,6 +74,8 @@ public:
 	bool			m_bDancePointsForOni;
 	bool			m_bTimestamping;
 	bool			m_bShowLyrics;
+	bool			m_bAutogenMissingTypes;
+	bool			m_bAutogenGroupCourses;
 
 	/* 0 = no; 1 = yes; -1 = auto (do whatever is appropriate for the arch). */
 	int				m_iBoostAppPriority;
