@@ -25,9 +25,12 @@ NEW FEATURE:  Added SKIPPY transform
 BUG FIX:  Fixed song seeking in editor at non 1x music rates
 NEW FEATURE:  More complete controls for BackgroundChanges in editor
 NEW FEATURE:  Shift+P in editor for "play current beat until end"
+NEW FEATURE:  Select between Normal and Difficult in Nonstop and Endless mode
 CHANGE:  Nonstop and Oni scoring and combo counter behave exactly like DDREX
 CHANGE:  HoldNote life snaps to full when button is pressed (instead of 
 	refilling slowly) ala DDR
+NEW FEATURE:  Toggle for Autogen of missing steps
+NEW FEATURE:  Toggle for Autogen of group Nonstop and Endless Courses
 
 ----------------------- Version 3.01 ---------------------------
 CHANGE:  Simplified NoteSkin tap graphic format.  Old NoteSkins will need to 
